# CobaltStrikeBeaconDLLSourceLeaked-CSVersion2022-4.5

./: .gitignore  IDF_ID_LEAKED.json  README.MD  beacon.sln  beacon.vcxproj  beacon.vcxproj.filters  dnsb.vcxproj  dnsb.vcxproj.filters  extc2.vcxproj  extc2.vcxproj.filters  install_lib.sh  package.bat  package.sh  pivot.vcxproj  pivot.vcxproj.filters
Releasex64/: CMakeCache.txt  CMakeLists.txt  tokens.h  tokens_dll.cpp
src/: ReflectiveDLLInjection.h  ReflectiveDll.cpp  ReflectiveLoader.1000k  ReflectiveLoader.100k  ReflectiveLoader.50k  ReflectiveLoader.5k  ReflectiveLoader.cpp  ReflectiveLoader.h  argue.cpp  argue.h  auth_guard  auth_guard.h  beacon.cpp  beacon.h  beacon_extc2.cpp  beacon_pivot.cpp  bformat.cpp  bformat.h  boff.cpp  build.cpp  build.h  callback.cpp  channel.cpp  channel.h  channel_tcp.cpp  client.cpp  client.h  client_smb.cpp  client_smb_extc2.cpp  client_tcp.cpp  clientint.h  commands.cpp  commands.h  dnsb.cpp  elevate.cpp  encoders.cpp  encoders.h  execute.cpp  files.cpp  filesys.cpp  (+58 more)
